# TORCH-RaR

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  settings.yaml  todo.md
docs/: RaR_Implementation_Guide.md  fine_tuning_methods_report.md
prompts/default/: explicit_eval_system.jinja2  explicit_eval_user.jinja2  implicit_eval_system.jinja2  implicit_eval_user.jinja2  rubric_system.jinja2  rubric_user.jinja2
prompts/toxicity/: rubric_system.jinja2  rubric_user.jinja2
scripts/: deploy.sh
src/torch_rar/: __init__.py  cache.py  config.py  data_loader.py  llm_client.py  logging_config.py  pipeline.py  progress.py  prompt_templates.py  reward_calculator.py  rubric_generator.py
