[project]
name = "torch-rar"
version = "0.1.0"
description = "Rubrics as Rewards - Dataset augmentation using RaR method for toxicity detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.50.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.26.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
